@@ -1,0 +1,3 @@
+# Note that __init__.py is intentional so pytest (more specifically py.path)
+# will detect us as a Python package. There's logic there that involves looking
+# specifically for this file.
