@@ -2,6 +2,9 @@ from hy.macros import macro
 from hy import HyList, HyInteger
 
 
+SECRET_MESSAGE = "Hello World"
+
+
 @macro("qplah")
 def tmac(ETname, *tree):
     return HyList((HyInteger(8), ) + tree)
